# vcc-compiler

./: .gitignore  CMakeLists.txt  README.md  condtest  test
docs/: SELF_HOSTING_ROADMAP.md  V_LANGUAGE_V01_PLAN.md  architecture.md  command  grammar.md  language_spec.md  requirement.txt  syntax.md  v_language_design
examples/: control_flow.v  fibonacci.v  functions.v  hello.v  showcase.v  types_and_operators.v
examples/v01/: arrays.v  comprehensive.v  conditions.v  functions.v  hello_v01.v  loops.v  match_stmt.v  operators.v  variables.v
include/vcc/ast/: AST.h  ASTDumper.h  ASTNode.h  ASTVisitor.h  Declarations.h  Expressions.h  Statements.h  Types.h
include/vcc/codegen/: CodeGen.h  LLVMBackend.h  LLVMCodeGenerator.h
include/vcc/common/: CompilerContext.h  Diagnostics.h  SourceLocation.h  Token.h
include/vcc/driver/: Compiler.h
include/vcc/ir/: IRBuilder.h  IRGen.h  IRInstruction.h  IRModule.h  IRPrinter.h
include/vcc/lexer/: Lexer.h
include/vcc/parser/: Parser.h
include/vcc/semantic/: SemanticAnalyzer.h  SymbolTable.h  TypeChecker.h
src/ast/: ASTDumper.cpp  ASTNode.cpp  CMakeLists.txt  Expressions.cpp
src/codegen/: CMakeLists.txt  CodeGen.cpp  LLVMBackend.cpp  LLVMCodeGenerator.cpp
src/common/: CMakeLists.txt  CompilerContext.cpp  Diagnostics.cpp  SourceLocation.cpp  Token.cpp
src/driver/: CMakeLists.txt  Compiler.cpp  main.cpp
src/ir/: CMakeLists.txt  IRBuilder.cpp  IRGen.cpp  IRInstruction.cpp  IRModule.cpp  IRPrinter.cpp
src/lexer/: CMakeLists.txt  Lexer.cpp
src/parser/: CMakeLists.txt  Parser.cpp
src/semantic/: CMakeLists.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.cpp.bak  SymbolTable.cpp  TypeChecker.cpp
tests/: CMakeLists.txt  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
tools/: CMakeLists.txt
tools/vcc-dump-ast/: CMakeLists.txt  main.cpp
